logs/nekbot.protocols.irc.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/inflect-0.2.5.dist-info'...
Listing './lib/python3.5/site-packages/irc'...
Listing './lib/python3.5/site-packages/irc/tests'...
Listing './lib/python3.5/site-packages/irc-16.2.dist-info'...
Listing './lib/python3.5/site-packages/jaraco'...
Listing './lib/python3.5/site-packages/jaraco/classes'...
Listing './lib/python3.5/site-packages/jaraco/stream'...
Listing './lib/python3.5/site-packages/jaraco.classes-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/jaraco.collections-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/jaraco.functools-1.17.dist-info'...
Listing './lib/python3.5/site-packages/jaraco.itertools-2.1.dist-info'...
Listing './lib/python3.5/site-packages/jaraco.logging-1.5.1.dist-info'...
Listing './lib/python3.5/site-packages/jaraco.stream-1.1.2.dist-info'...
Listing './lib/python3.5/site-packages/jaraco.text-1.9.2.dist-info'...
Listing './lib/python3.5/site-packages/more_itertools'...
Listing './lib/python3.5/site-packages/more_itertools/tests'...
Listing './lib/python3.5/site-packages/more_itertools-4.0.1.dist-info'...
Listing './lib/python3.5/site-packages/nekbot'...
Listing './lib/python3.5/site-packages/nekbot/conf'...
Listing './lib/python3.5/site-packages/nekbot/conf/locale'...
Listing './lib/python3.5/site-packages/nekbot/conf/locale/es'...
Listing './lib/python3.5/site-packages/nekbot/conf/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/nekbot/conf/plugin_template'...
Listing './lib/python3.5/site-packages/nekbot/conf/plugin_template/nekbot'...
Listing './lib/python3.5/site-packages/nekbot/conf/plugin_template/nekbot/plugins'...
Listing './lib/python3.5/site-packages/nekbot/conf/plugin_template/nekbot/plugins/plugin_template'...
Listing './lib/python3.5/site-packages/nekbot/conf/project_template'...
Listing './lib/python3.5/site-packages/nekbot/conf/project_template/plugins'...
Listing './lib/python3.5/site-packages/nekbot/conf/project_template/storage'...
Listing './lib/python3.5/site-packages/nekbot/core'...
Listing './lib/python3.5/site-packages/nekbot/core/commands'...
Listing './lib/python3.5/site-packages/nekbot/core/permissions'...
Listing './lib/python3.5/site-packages/nekbot/core/types'...
Listing './lib/python3.5/site-packages/nekbot/plugins'...
Listing './lib/python3.5/site-packages/nekbot/protocols'...
Listing './lib/python3.5/site-packages/nekbot/protocols/base'...
Listing './lib/python3.5/site-packages/nekbot/protocols/irc'...
Listing './lib/python3.5/site-packages/nekbot/storage'...
Listing './lib/python3.5/site-packages/nekbot/utils'...
Compiling './lib/python3.5/site-packages/nekbot/utils/modules.py'...
***   File "./lib/python3.5/site-packages/nekbot/utils/modules.py", line 18
    print traceback.format_exc()
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nekbot-0.1.2.34.egg-info'...
Listing './lib/python3.5/site-packages/nekbot.protocols.irc-0.1.0.16.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tempora'...
Listing './lib/python3.5/site-packages/tempora/tests'...
Listing './lib/python3.5/site-packages/tempora-1.10.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/argparse_tests'...
Listing './lib/python3.5/site-packages/tests/types'...
Listing './lib/python3.5/site-packages/tests/utils_strings'...
Listing './share'...
Listing './share/python-wheels'...
